sumo/tests/netconvert/errors/XML/xml_false_edg/errors.netconvert
Error: Could not open edges-file 'hokkaido2.edg.xml'.
Quitting (on error).
